--- a/index.html
+++ b/index.html
@@ -14,8 +14,13 @@
     <h1 class="logo">Etch-a-Sketch</h1>
     </div>
     <div class="grid-container">
-
     </div>
+    <div class="buttons-container">
+        <button class="control reset">Reset</button>
+        <button class="control">RGB</button>
+        <button class="control">Black</button>
+        <button class="control blackness">Blackness</button>
+        </div>
    </div> 
 </body>
 </html>
